add more example, add print errors